Tiny update to example

--- a/example/index.html
+++ b/example/index.html
@@ -25,9 +25,9 @@
                 shiftStep: 10,
                 altStep: 0.1,
                 stepWidth: 5,
-                formatter: function(value) {
-                    return value + 'px';
-                },
+                // formatter: function(value) {
+                //     return value + 'px';
+                // },
                 // parseInput: function(input) {
                 //  return parseFloat(input);
                 // }
