Now fires 'start' and 'end' events

--- a/example/index.html
+++ b/example/index.html
@@ -28,7 +28,7 @@
                 // formatter: function(value) {
                 //     return value + 'px';
                 // },
-                // parseInput: function(input) {
+                // inputParser: function(input) {
                 //  return parseFloat(input);
                 // }
             });
